--- a/reservation-service/package.json
+++ b/reservation-service/package.json
@@ -13,8 +13,10 @@
     "@types/express": "^5.0.6",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.10",
+    "@types/node": "^25.0.9",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
